# HealthTech

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .sops.yaml  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD_HealthTech.md  README.md  SECURITY.md  deny.toml  justfile
.claude/commands/: implement.md  issue.md  issues.md  review.md
.github/: dependabot.yml
.github/workflows/: adw-sdlc.yml  ci.yml  secrets.yml
adw_sdlc/: HEALTHTECH_PORT.md  package-lock.json  package.json
adw_sdlc/src/: cli.ts  common.ts  issue.ts  orchestrator.ts  phases.ts
adw_sdlc/test/: issue.test.ts  orchestrator.test.ts
app-medecin/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app-medecin/src/: app.test.ts  app.tsx  main.tsx  session.ts  walkthrough.test.ts
app-patient/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app-patient/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
app-patient/ios/Runner/: GeneratedPluginRegistrant.m  KeystoreChannelPlugin.swift
app-patient/lib/: main.dart
app-patient/test/: smoke_test.dart
app-patient/test/cloud/: backend_client_test.dart  media_client_test.dart  network_retry_test.dart
app-patient/test/doctor/: consultation_edit_service_test.dart  consultation_merge_test.dart  consultation_session_test.dart  media_upload_service_test.dart  media_view_service_test.dart  offline_upload_queue_test.dart  scan_service_test.dart  session_end_service_test.dart  storage_budget_test.dart  sync_service_test.dart
app-patient/test/e2e/: consultation_loop_e2e_test.dart
app-patient/test/legal/: consent_model_test.dart
app-patient/test/perf/: decrypt_pipeline_perf_test.dart
app-patient/test/qr/: access_token_test.dart
app-patient/test/record/: blob_size_budget_test.dart  media_cipher_test.dart  medical_record_store_test.dart  medical_record_test.dart  plaintext_compressor_test.dart  prescription_test.dart  record_size_guard_test.dart
app-patient/test/secure/: patient_account_test.dart  recovery_service_test.dart
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  error.rs  main.rs  store.rs
backend/src/media/: access.rs  memory.rs  mod.rs
backend/src/store/: memory.rs
backend/tests/: check_residency_sh.rs  check_secrets_sh.rs
crypto-core/: Cargo.toml  README.md
crypto-core/benches/: decrypt_record.rs
crypto-core/src/: lib.rs
crypto-core/tests/: aes_gcm_nist_vectors.rs  decrypt_perf_regression.rs  pbkdf2_rfc6070_vectors.rs
crypto-core/tests/vectors/: PROVENANCE.md  nist_aes256gcm.rs
docs/adr/: 0000-index.md  0001-patient-app-flutter.md  0001-patient-app-native-android.md  0002-doctor-interface-pwa.md  0003-shared-crypto-core-rust.md  0004-backend-rust-axum.md  0005-storage-and-sovereign-hosting.md  0006-offline-storage-and-keys.md  0007-secrets-and-environments.md  0008-ci-cd-pipeline.md  0009-sovereign-operator-selection.md  0010-offline-sync-conflict-resolution.md
docs/compliance/: README.md  attestation-localisation-donnees.md  cartographie-donnees-et-flux.md  controles.md  ecarts.md  exigences-legales.md  journal-validation-juridique.md  loi-2013-450-artci-matrix.md  registre-des-traitements.md
docs/legal/: consent-v1.md
docs/perf/: decryption-budget.md  measurement-protocol.md
docs/security/: crypto-core-review.md  independent-crypto-review-brief.md  pentest-scope.md
docs/threat-model/: stride-threat-model.md
docs/ux/: README.md  low-end-device-profile.md  low-end-validation-protocol.md  medecin-ux-guidelines.md  usability-test-protocol.md
infra/: README.md
infra/ansible/: README.md  playbook.yml
infra/ansible/inventories/: dev  (+2 more)
infra/dev/: compose.yaml
infra/terraform/: README.md  main.tf
scripts/: check-compliance-matrix.sh  check-homologation-dossier.sh  check-lowend-docs.sh  check-residency.sh  check-secrets.sh  check-threat-model.sh  check-ux-docs.sh  test-compliance-matrix.sh  test-homologation-dossier.sh  test-residency.sh
secrets/: README.md
secrets/dev/: services.sops.yaml.example
secrets/prod/: services.sops.yaml.example
secrets/staging/: services.sops.yaml.example
specs/: aes-256-gcm-blob-encryption-module.md  consultation-loop-end-to-end-demo.md  encrypted-media-offload-ephemeral-url.md  environments-and-secrets-management.md  issue-24-degraded-network-optimization.md  issue-25-security-audit-pentest.md  issue-26-independent-crypto-review.md  issue-27-decryption-performance-validation.md  issue-28-doctor-ux-under-5-min.md  issue-29-low-end-device-accessibility-robustness.md  issue-30-artci-homologation-dossier.md  issue-7-consent-policy-onboarding.md  key-derivation-and-recovery-pbkdf2.md  local-master-key-generation-and-management.md  loi-2013-450-artci-compliance-matrix.md  medical-record-schema.md  network-resync-offline-queue-drain.md  note-prescription-merge-in-memory.md  secure-offline-prescription-queue-sqlcipher.md  sovereign-hosting-provisioning-cote-divoire.md  zero-knowledge-blob-storage-service.md
(+63 files in other folders)
